--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,16 @@
-<h1>Contact Me</h1>
-<p>Tel: +639 957 643 290</p>
-<p>Email: grace@gmail.com</p>
-<p>Address:</p>
-<p>
-  1112 Sitio Mulawin<br />
-  Mexico City<br />
-  Philippines <br />
-</p>
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+<meta charset="UTF-8">
+<meta name = "viewport" content="width=device-width, initial-scale=1.0">
+<title>My Contact</title>
+</head>
+<body>
+    <h1>My Contact Details</h1>
+    
+        <p>Bliss, Philippines</p>
+       <p>+639 957 890 986 </p>
+        <p>grace@email.com</p>
+    <hr/>
+</body>
+</html>
