--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <hr/>
         <h2>Online Courses/Webinars</h2>
         <ul>
-            <h4><li>Technical Support Fundamentalsa</li></h4>
+            <h4><li>Technical Support Fundamentals</li></h4>
             <p>Google through Coursera</p>
             <p>October 14, 2020</p>
 
@@ -65,7 +65,7 @@
                 <li>Interacted with the Verifiers to close the checks quickly</li>
             </ul>
             <h3><li>Administrative Assistant - 3AJ's Builders</li></h3>
-            <p>30 May 2016 -21 December 2016</p>
+            <p>30 May 2016 - 21 December 2016</p>
             <ul>
                 <li>Tracked and maintained inventory of the construction materials</li>
                 <li>Provided general administrative and organizational support such as filing and responding to emails</li>
